stop body from scrolling, and scroll  chess and sidebar overflow internally

--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -1,5 +1,11 @@
+html,
+body {
+  overflow: hidden;
+}
+
 .App {
   text-align: center;
+  height: 100vh;
 }
 
 #login {
